adicao de pagamentos
